# my-boilerplate

./: .gitignore  CLAUDE.md  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  discussion-issue.md  feature_request.yml  parent-issue.md
.github/workflows/: check-makefile.yml  dependabot-auto-merge.yml  e2e.yml  go-ci.yml  go-cli.yml  go-graphql-api.yml  go-grpc-api.yml  go-react-spa.yml  go-rest-api.yml  go-ssr-web-minimal.yml  go-ssr-web.yml  python-cli.yml  python-web.yml  react-spa-cloudflare-deploy.yml  react-spa-cloudflare.yml  react-spa-graphql.yml  react-spa.yml  rust-cli.yml  scaffold-verify-github-templates.yml  scaffold-verify-go-cli.yml  scaffold-verify-go-graphql-api.yml  scaffold-verify-go-grpc-api.yml  scaffold-verify-go-react-spa-noauth.yml  scaffold-verify-go-react-spa.yml  scaffold-verify-go-rest-api.yml  scaffold-verify-go-ssr-web-minimal.yml  scaffold-verify-go-ssr-web.yml  scaffold-verify-go.yml  scaffold-verify-python-cli.yml  scaffold-verify-python-web.yml  scaffold-verify-react-spa-cloudflare.yml  scaffold-verify-react-spa-graphql.yml  scaffold-verify-react-spa.yml  scaffold-verify-react.yml  scaffold-verify-rust-cli.yml  scaffold-verify.yml  sync-check.yml
e2e/: README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/go-ssr-web/: a11y.spec.ts  users.spec.ts  visual.spec.ts
e2e/react-spa/: a11y.spec.ts  users.spec.ts  visual.spec.ts
e2e/react-spa-cloudflare/: a11y.spec.ts  visual.spec.ts
e2e/react-spa-graphql/: a11y.spec.ts  users.spec.ts  visual.spec.ts
go-cli/: .golangci.yml  Makefile  README.md  go.mod  go.sum  main.go  template.toml  tools.go
go-cli/cmd/: root.go  root_test.go
go-graphql-api/: .air.toml  .golangci.yml  Makefile  README.md  atlas.hcl  go.mod  go.sum  gqlgen.yml  template.toml
go-graphql-api/api/: schema.graphql
go-graphql-api/atlasgen/: main.go
go-grpc-api/: .air.toml  .golangci.yml  Dockerfile  Makefile  README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum  template.toml
go-grpc-api/atlasgen/: main.go
go-react-spa/: .air.toml  .compose.toml  .gitignore  .golangci.yml  Makefile  README.md  go.mod  go.sum  template.toml
go-react-spa-noauth/: README.md  template.toml
go-react-spa/atlasgen/: main.go
go-react-spa/frontend/: package.json  vite.config.ts
go-rest-api/: .air.toml  .gitignore  .golangci.yml  Dockerfile  Makefile  README.md  go.mod  go.sum  template.toml
go-rest-api/.github/: PULL_REQUEST_TEMPLATE.md
go-rest-api/api/: openapi.yaml
go-rest-api/atlasgen/: main.go
go-rest-api/migrations/: 20240101000000_create_users.sql
go-ssr-web/: .gitignore  .golangci.yml  Dockerfile  Makefile  README.md  go.mod  go.sum  template.toml
go-ssr-web-minimal/: .golangci.yml  Makefile  README.md  go.mod  go.sum  template.toml
go-ssr-web-minimal/web/: embed.go
go-ssr-web/atlasgen/: main.go
go-ssr-web/scripts/: run-with-tailwind.sh
go-ssr-web/web/: embed.go
meta/github-workflow/: PR-template.md  README.md  completion-comment.md  discussion-issue.md  install.sh  issue-workflow.md  parent-issue.md  sub-issue.md
python-cli/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  template.toml
python-cli/.github/workflows/: ci.yml
python-cli/src/mycli/: __init__.py  cli.py  config.py  logger.py
python-cli/tests/: test_cli.py  test_config.py  test_logger.py
python-web/: .gitignore  Makefile  README.md  alembic.ini  package-lock.json  package.json  pyproject.toml  template.toml
python-web/scripts/: check_venv.py
python-web/src/myweb/: __init__.py  app.py  config.py  database.py  logging_config.py  models.py
python-web/src/myweb/alembic/: env.py
python-web/src/myweb/alembic/versions/: 20260501_0001_initial.py
python-web/src/myweb/auth/: __init__.py  jwt_utils.py  password.py
python-web/src/myweb/repositories/: item_repo.py  user_repo.py
python-web/src/myweb/routes/: auth.py  items.py
python-web/src/myweb/services/: item_service.py  user_service.py
python-web/templates/: base.html  index.html
python-web/templates/auth/: login.html  register.html
python-web/templates/items/: edit.html  new.html  show.html
python-web/tests/: conftest.py  test_auth.py  test_auth_routes.py  test_config_logging.py  test_makefile.py  test_production.py  test_repositories.py  test_routes.py  test_services.py  test_user_service.py
react-spa/: .gitignore  .shared-ui.toml  Makefile  eslint.config.js  package-lock.json  package.json  template.toml  vitest.config.ts
react-spa-cloudflare/: .shared-ui.toml  Makefile  README.md  package-lock.json  package.json  template.toml  wrangler.toml
react-spa-cloudflare/public/: _routes.json
react-spa-cloudflare/src/: App.css  App.test.tsx  App.tsx  router.test.tsx  router.tsx
react-spa-graphql/: .env.example  .shared-ui.toml  Makefile  README.md  codegen.ts  eslint.config.js  package-lock.json  package.json  template.toml  tsconfig.app.json  vitest.config.ts
react-spa-graphql/docs/: SYNC_FILES.md
rust-cli/: .env.example  .gitignore  Cargo.toml  Makefile  README.md  clippy.toml  template.toml
rust-cli/config/: default.toml
rust-cli/src/: cli.rs  greet.rs  lib.rs  logging.rs  main.rs  settings.rs
rust-cli/tests/: integration_test.rs
scripts/: download.sh  e2e-update-snapshots.sh
shared-react-ui/: README.md  package.json  tsconfig.json  vite.config.ts
(+230 files in other folders)
