[package]
name = "rust-cli"
version = "0.1.0"
edition = "2021"
description = "A simple CLI application"
license = "MIT"

[[bin]]
name = "mycli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
strip = true
