[package]
name = "rust-cli"
version = "0.1.0"
edition = "2021"
description = "A simple CLI application"
license = "MIT"

[[bin]]
name = "mycli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
config = { version = "0.14", default-features = false, features = ["toml"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
strip = true
